tests/NormalTests/paczka1/fuzzy1/58367756.err
Error in line 1: DWZUQV A531 5,8
Error in line 5: iseCJVn A398 47,8
Error in line 21: iseCJVn A192 59,57
Error in line 19: iseCJVn A398 66,9
Error in line 23: iseCJVn A192 23,3
Error in line 30: A398 A212 66,6
Error in line 32: vZgCn A212 26,7
